# Arkivar

./: .gitignore  LICENSE  README.md  archivists_helper.py  arkivar.py  arkivar_OLD.py  changelog.csv  cli.py  data_objects.py  init_dir.py  log_writer.py  main.py  metadata.json  metadata.py  pyproject.toml  utils.py
ns/: technical-vocabulary.md  technical.ttl
src/arkivar/: cli.py  init_dir.py  log_writer.py  main.py  metadata.py  pipeline.py  utils.py
testdir/: testfile.md
