[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "arkivar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bagit>=1.9.0",
    "puremagic>=2.2.0",
    "rdflib>=7.6.0",
]

[project.scripts]
arkivar = "arkivar.cli:main"
